# neuroscangen

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
docs/: index.md  modules.md
src/neuroscangen/entities/: brain_scan.py
src/neuroscangen/use_cases/: generate_scan.py
tests/: test_foo.py  test_unit.py
