[project]
name = "neuroscangen"
version = "0.0.1"
description = "Generative AI with brain CT-scans."
authors = [{ name = "Thomas Boulier", email = "tboulier@chu-grenoble.fr" }]
readme = "README.md"
license = { text  = "MIT" }
keywords = ["generative ai", "ai", "genai", "gen ai", "ct-scan", "brain", "neuroscience"]
requires-python = ">=3.9, <4.0"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
]

[project.urls]
Repository = "https://github.com/tomboulier/neuroscangen"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "deptry>=0.22.0",
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
